@@ -1,3 +1,7 @@
+2007-07-11  Marcus Meissner  <marcus@jet.franken.de>
+
+	* g3.c: Added Ricoh Caplio R5 id.
+
 2006-08-29  Marcus Meissner  <marcus@jet.franken.de>
 	
 	* g3.c: Added Ricoh Caplio R4 id.
